syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.github.iamnicknack.pjs.grpc.gen.v1.types";

package pjs.v1.types;

message DeviceRequest {
  string deviceId = 1;
}

message IntegerRequest {
  string deviceId = 1;
  int32 value = 2;
}

message IntegerResponse {
  int32 value = 1;
}

message BooleanRequest {
  string deviceId = 1;
  bool value = 2;
}

message BooleanResponse {
  bool value = 1;
}

message DataRequest {
  string deviceId = 1;
  bytes payload = 2;
}

message DataResponse {
  bytes payload = 1;
}

message Empty {}
